--- a/app/src/main/res/menu/activity_result.xml
+++ b/app/src/main/res/menu/activity_result.xml
@@ -2,11 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.delaroystudios.quiz.ResultActivity">
+    tools:context="com.example.nicodelacruz.drunkentap.ResultActivity">
     <item
         android:id="@+id/action_settings"
         android:title="@string/settings_menu_item"
         android:icon="@drawable/ic_filter"
         android:orderInCategory="1"
         app:showAsAction="ifRoom" />
+
 </menu>
